ECA-83: use latest ldap.jar from Novell.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@2726 37aeb1de-b14b-0410-9a0e-82b28170d228